feat: Refactor project structure and update package references to 'theknife'